# ReMoRa

./: .gitignore  LICENSE  README.md  infer_with_mv.py  pyproject.toml
llava/: conversation.py  mm_utils.py  utils.py
llava/eval/: infer.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_qwen.py
llava/model/multimodal_encoder/: clip_encoder.py  open_clip_encoder.py  siglip_encoder.py
llava/model/multimodal_resampler/: builder.py
llava/model/multimodal_resampler/mamba_ssm/modules/: gop_compressor.py  mamba_compressor.py  mamba_simple.py  mv_encoder.py  two_stage_compressor.py
llava/train/: create_video_index.py  gop_video_loader.py  llava_trainer.py  motion_vector_loader.py  train.py  train_mv_refiner.py
mviz/: README.md  extract_features.py  extract_mvs_ffmpeg
mviz/examples/: ml_features.py
mviz/extractors/: codec_features.py  codec_mvs.py  frame_selector.py  motion_vectors.py
mviz/utils/: frame_residuals.py  video_encoder.py
mviz/visualizers/: gop_visualization.py  residual_grid.py  residual_overlay.py  visualization_utils.py
scripts/: eval_remora.sh  exp.yaml  extract_motion_vectors.py  train_mv_refiner.sh  train_remora.sh
